# linker

./: .gitignore  CMakeLists.txt  DockerFile  README.md
src/: main.cpp  unittest_main.cpp
src/core/: COW_memory_blob.cpp  addressable.cpp  component.cpp  elf.cpp  general.cpp  read_write_blob.cpp  section.cpp
src/core/header/: header.cpp  header_parse_strategy.cpp  header_unittest.cpp
src/core/include/: addressable.h  component.h  section.h
src/core/include/section/: header_parse_strategy.h  section.h
src/core/linker/: link_struct.cpp  link_struct_unittest.cpp
src/core/reltab/: relocation_table_unittest.cpp
src/core/script/: lexer.l  parser.cpp  parser.y  parser_unittest.cpp
src/core/section/: asection.cpp  header_parse_strategy.cpp  helpers.cpp  section.cpp  section_parse_strategy.cpp  section_table.cpp  section_unittest.cpp
src/core/symtab/: symbol.cpp  symbol_parse_strategy.cpp  symbol_table.cpp  symbol_table_unittest.cpp
src/include/core/: COW_memory_blob.h  addressable.h  elf.h  general.h  locatable.h  node.h  pimpl_deducer.h  read_write_blob.h  strategy_generator.h  tree.hh
src/include/core/header/: header.h  header_member_types.h  header_parse_strategy.h
src/include/core/linker/: link_struct.h  linker.h
src/include/core/reltab/: relocation.h  relocation_member_types.h  relocation_table.h
src/include/core/script/: parser.h
src/include/core/section/: asection.h  filters.h  header_parse_strategy.h  helpers.h  section.h  section_member_types.h  section_parse_strategy.h  section_table.h  types.h
src/include/core/segment/: member_types.h  segment.h
src/include/core/symtab/: filters.h  helpers.h  symbol.h  symbol_member_types.h  symbol_parse_strategy.h  symbol_table.h
testfiles/: data_empty_bss_global_and_local_symbol  global_and_local_symbol  simple_main_local_symbol  simple_main_no_data  simple_script  sleep  wrong_magic_bytes
